--- a/frontend/src/assets/styles/basics/base.css
+++ b/frontend/src/assets/styles/basics/base.css
@@ -13,8 +13,8 @@ html {
 body {
   margin: 0 auto;
   height: 100%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
   color: --var(clr2);
   background-color: var(--bg-charcoal);
