--- a/frontend/src/assets/styles/components/label/ModalLabel.css
+++ b/frontend/src/assets/styles/components/label/ModalLabel.css
@@ -21,9 +21,9 @@
   border-radius: 5px;
   justify-content: center;
   padding: 0.25rem 0.5rem;
-  font-size: 0.7rem;
+  font-size: 14px;
   font-weight: 500;
-  text-transform: uppercase;
+  text-transform: capitalize;
   letter-spacing: 0.5px;
 }
 
@@ -37,10 +37,10 @@
 }
 
 .add-label-button {
-  background: transparent;
   border: none;
   background: var(--ds-background-neutral);
   font-size: 1em;
+  color: var(--ds-text);
   cursor: pointer;
   padding: 0.5rem;
   &:hover {
