--- a/frontend/src/assets/styles/pages/BoardDetails.css
+++ b/frontend/src/assets/styles/pages/BoardDetails.css
@@ -15,40 +15,26 @@
   width: 100%;
   background: var(--gray5);
   border-radius: var(--ds-radius-xlarge, 12px);
-  padding: 0.7rem;
+  padding: 0.5rem;
 }
 
 .add-list-actions {
+  margin-top: 0.5rem;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-}
-
-.MuiButtonBase-root.add-submit-button {
-  text-transform: none;
-  font-weight: 500;
-  padding: 0.375rem 0.75rem;
-}
-
-.MuiIconButton-root.add-close-button {
-  color: var(--gray2);
-  padding: 0.25rem;
-  border-radius: 0.5rem;
-}
-
-.MuiIconButton-root.add-close-button:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  gap: 0.4rem;
 }
 
 .add-list-button {
   display: flex;
-  align-items: left;
+  align-items: center;
   justify-content: flex-start;
   border-radius: var(--ds-radius-xlarge, 12px);
   width: 100%;
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
+  color: var(--gray1);
   background: rgba(0, 0, 0, 0.265);
   backdrop-filter: blur(8px);
   gap: 0.5rem;
