More style updates and changes

--- a/frontend/src/assets/styles/components/Card.css
+++ b/frontend/src/assets/styles/components/Card.css
@@ -43,10 +43,9 @@
 }
 
 .floating-card-content-container {
-  background-color: var(--gray4);
   border: 1px solid var(--black);
   border-radius: 6px;
-  overflow: visible;
+  overflow: hidden;
   position: relative;
 }
 
@@ -73,6 +72,7 @@
   position: relative;
   display: flex;
   margin-top: auto;
+  background-color: var(--gray4);
   flex-direction: column;
   color: var(--gray1);
   border-radius: 0 0 6px 6px;
@@ -89,15 +89,21 @@
   position: absolute;
   bottom: -2.5rem;
   left: 0;
+  width: fit-content;
 }
 
 .card-edit-button.MuiIconButton-root {
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
+  width: 24px;
+  height: 24px;
   opacity: 0;
   transition: opacity 0.2s ease;
   z-index: 1;
+  > svg {
+    font-size: 16px;
+  }
   &:hover {
     background-color: var(--gray3);
     color: var(--gray1);
@@ -218,7 +224,7 @@
   gap: 0.5rem;
   border-radius: 0.2rem;
   color: var(--gray1);
-  background: var(--gray4);
+  background: #303134;
   padding: 0.5rem;
   transition: background-color 0.15s ease, transform 0.05s ease,
     box-shadow 0.1s ease;
