--- a/frontend/src/assets/styles/components/CardComments.css
+++ b/frontend/src/assets/styles/components/CardComments.css
@@ -34,7 +34,8 @@
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
-  width: 460px;
+  min-width: 370px;
+  max-width: 1000px;
   overflow-y: auto;
   overflow-x: hidden;
   max-height: calc(100vh - 200px);
@@ -232,7 +233,7 @@
 }
 
 /* Responsive - Mobile */
-@media only screen and (max-width: 637px) {
+@media only screen and (max-width: 829px) {
   .card-modal-comments {
     position: absolute;
     top: 0;
@@ -258,7 +259,7 @@
 }
 
 /* Responsive - Tablet */
-@media only screen and (min-width: 637px) and (max-width: 1095px) {
+@media only screen and (min-width: 830px) and (max-width: 1095px) {
   .card-modal-comments.open {
     width: 45%;
   }
