Fix card modal styles

--- a/frontend/src/assets/styles/components/CardModal.css
+++ b/frontend/src/assets/styles/components/CardModal.css
@@ -83,7 +83,7 @@
 .card-modal-tags-container {
   display: flex;
   flex-wrap: wrap;
-  padding: 0.5rem 0 0 2.25rem;
+  padding: 0.5rem 0 0.5rem 2.25rem;
 }
 
 .card-modal-description {
@@ -203,6 +203,7 @@
   border-radius: 16px 16px 0 0;
   overflow: hidden;
   border-bottom: 1px solid var(--gray3);
+  flex-shrink: 0;
 }
 
 .card-modal-header {
@@ -236,7 +237,7 @@
 .card-modal-header-list-title {
   background: var(--gray4);
   color: var(--gray1);
-  padding: 0.125rem 0.25rem;
+  padding: 0.125rem 0.4rem 0.125rem 0.4rem;
   border-radius: 6px;
 }
 
@@ -279,24 +280,23 @@
 .members-title {
   font-size: 0.8rem;
   font-weight: normal;
+  padding: 0.5rem 0 0.5rem 0;
   word-break: break-word;
   color: var(--gray1);
   background: transparent;
-  padding: 0.5rem 0 0.5rem 0;
 }
 
 .modal-members {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
-  gap: 0.3rem;
+  gap: 0.4rem;
   margin: 0 2rem 0 0;
+  padding: 0.1rem 0 0.25rem 0rem;
 }
 
-.modal-members .card-members {
-  display: flex;
-  align-items: center;
-  gap: 0.25rem;
+.card-modal-members {
+  gap: 0.2rem;
+  margin: 0 2rem 0 0;
 }
 
 .add-member-button {
@@ -305,8 +305,8 @@
   color: var(--gray1);
   cursor: pointer;
   padding: 0.5rem;
-  width: 32px;
-  height: 32px;
+  width: 34px;
+  height: 34px;
   display: flex;
   align-items: center;
   justify-content: center;
