--- a/frontend/src/assets/styles/components/label/ModalLabel.css
+++ b/frontend/src/assets/styles/components/label/ModalLabel.css
@@ -20,8 +20,9 @@
   align-items: center;
   border-radius: 5px;
   justify-content: center;
-  padding: 0.25rem 0.5rem;
+  padding: 0rem 0.5rem 0rem 0.5rem;
   font-size: 14px;
+  height: 34px;
   font-weight: 500;
   text-transform: capitalize;
   letter-spacing: 0.5px;
@@ -38,11 +39,16 @@
 
 .add-label-button {
   border: none;
+  height: 34px;
+  width: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: var(--ds-background-neutral);
-  font-size: 1em;
+  border-radius: 5px;
   color: var(--ds-text);
   cursor: pointer;
-  padding: 0.5rem;
+
   &:hover {
     background: var(--ds-background-neutral-hovered);
   }
