--- a/frontend/src/assets/styles/components/Card.css
+++ b/frontend/src/assets/styles/components/Card.css
@@ -119,7 +119,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 4px;
-  padding: 0rem 0.25rem 0 0.25rem;
+  padding: 0.25rem;
   margin: 0 2rem 0 0;
 }
 
@@ -130,7 +130,7 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 1.4;
-  padding: 0.5rem 1.5rem 0.5rem 0.5rem;
+  padding: 0.4rem 1.5rem 0.4rem 0.5rem;
   word-break: break-word;
   color: var(--gray1);
 }
@@ -157,7 +157,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  margin: 0.6rem 0.4rem 0.5rem 0.4rem;
+  margin: 0.5rem 0.4rem 0.5rem 0.4rem;
   font-size: 0.75rem;
   > svg {
     font-size: 18px;
@@ -167,6 +167,8 @@
 .card-footer-left-attachments {
   display: flex;
   align-items: center;
+  gap: 0.25rem;
+  margin-top: 2px;
   > svg {
     font-size: 17px;
     transform: rotate(45deg);
@@ -175,17 +177,17 @@
 
 .card-footer-left-comments {
   display: flex;
-  align-items: center;
   gap: 0.25rem;
+  margin-top: 2px;
   > svg {
-    margin-top: 2px;
+    margin-top: 1px;
     font-size: 17px;
   }
 }
 .card-footer-right {
   display: flex;
   gap: 0.5rem;
-  padding: 0.25rem 0.25rem;
+  padding: 0rem 0.25rem;
   font-size: 0.75rem;
 }
 
@@ -199,7 +201,6 @@
 .card-popover {
   display: flex;
   flex-direction: column;
-  background-color: transparent;
   color: var(--gray1);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   transform: translateY(-0.5rem);
@@ -210,7 +211,6 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  background-color: transparent;
   padding-top: 8px;
   padding-left: 5px;
 }
