--- a/frontend/src/assets/styles/components/Card.css
+++ b/frontend/src/assets/styles/components/Card.css
@@ -199,6 +199,7 @@
 }
 
 .card-popover {
+  font-family: inherit;
   display: flex;
   flex-direction: column;
   color: var(--gray1);
@@ -217,6 +218,7 @@
 
 .card-menu-button {
   font-weight: 500;
+  font-family: inherit;
   font-size: 0.875rem;
   width: fit-content;
   display: flex;
